--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -336,6 +336,7 @@ library
                  http-client >= 0.4.30 && < 0.6,
                  http-client-tls >= 0.2.4 && < 0.4,
                  http-types >= 0.8 && < 0.10,
+                 case-insensitive >= 1.2 && < 1.3,
                  csv-conduit >= 0.6 && < 0.7
   if os(windows)
     cpp-options:      -D_WINDOWS
