Split list of authors from MANUAL.txt into separate file, AUTHORS.md.
It was getting too long for a man page.

--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -120,7 +120,8 @@ data-files:
                  MANUAL.txt, COPYRIGHT
 extra-source-files:
                  -- documentation
-                 INSTALL.md, BUGS, README.md, CONTRIBUTING.md, changelog
+                 INSTALL.md, AUTHORS.md, README.md,
+                 CONTRIBUTING.md, BUGS, changelog,
                  man/pandoc.1
                  -- stack build plan
                  stack.yaml
