Updated linux Makefile to use alpine.

--- a/linux/Makefile
+++ b/linux/Makefile
@@ -4,15 +4,15 @@ REVISION?=1
 
 build:
 	mkdir -p $(ARTIFACTS)
-	docker build -t debian-pandoc .
+	docker build -t alpine-pandoc .
 	docker run --env TREE=$(TREE) --env REVISION=$(REVISION) \
-	    -v $(ARTIFACTS):/artifacts debian-pandoc
+	    -v $(ARTIFACTS):/artifacts alpine-pandoc
 
 interact:
 	docker run --env TREE=$(TREE) --env REVISION=$(REVISION) \
-		-v $(ARTIFACTS):/artifacts -it debian-pandoc bash
+		-v $(ARTIFACTS):/artifacts -it alpine-pandoc bash
 
 setup:
-	docker pull debian:jessie
+	docker pull alpine:edge
 
 .PHONY: build setup interact
