Use CamelCase for JavaScript for uniformity
other instances when javascript is refered to in pandoc is also in CamelCase, the official casing of JavaScript.

--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -25,7 +25,7 @@ description:     Pandoc is a Haskell library for converting from one markup
                  RTF, MediaWiki, DokuWiki, ZimWiki, Textile, groff man,
                  groff ms, plain text, Emacs Org-Mode, AsciiDoc,
                  Haddock markup, EPUB (v2 and v3), FictionBook2, InDesign
-                 ICML, Muse, and several kinds of HTML/javascript slide
+                 ICML, Muse, and several kinds of HTML/JavaScript slide
                  shows (S5, Slidy, Slideous, DZSlides, reveal.js).
                  .
                  In contrast to most existing tools for converting Markdown
