--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -338,8 +338,7 @@ library
                  http-client >= 0.4.30 && < 0.6,
                  http-client-tls >= 0.2.4 && < 0.4,
                  http-types >= 0.8 && < 0.10,
-                 case-insensitive >= 1.2 && < 1.3,
-                 csv-conduit >= 0.6 && < 0.7
+                 case-insensitive >= 1.2 && < 1.3
   if os(windows)
     cpp-options:      -D_WINDOWS
   else
@@ -548,7 +547,6 @@ test-suite test-pandoc
      hs-source-dirs: prelude
      other-modules:  Prelude
   build-depends:  base >= 4.2 && < 5,
-                  syb >= 0.1 && < 0.8,
                   pandoc,
                   pandoc-types >= 1.17.2 && < 1.18,
                   bytestring >= 0.9 && < 0.11,
@@ -557,7 +555,6 @@ test-suite test-pandoc
                   filepath >= 1.1 && < 1.5,
                   hslua >= 0.9 && < 0.10,
                   process >= 1.2.3 && < 1.7,
-                  skylighting >= 0.4.2 && < 0.5,
                   temporary >= 1.1 && < 1.3,
                   Diff >= 0.2 && < 0.4,
                   tasty >= 0.11 && < 0.12,
@@ -567,8 +564,7 @@ test-suite test-pandoc
                   QuickCheck >= 2.4 && < 2.11,
                   containers >= 0.4.2.1 && < 0.6,
                   executable-path >= 0.0 && < 0.1,
-                  zip-archive >= 0.2.3.4 && < 0.4,
-                  mtl >= 2.2 && < 2.3
+                  zip-archive >= 0.2.3.4 && < 0.4
   other-modules:  Tests.Old
                   Tests.Command
                   Tests.Helpers
@@ -612,7 +608,6 @@ benchmark benchmark-pandoc
                    time, bytestring, containers,
                    base >= 4.2 && < 5,
                    text >= 0.11 && < 1.3,
-                   syb >= 0.1 && < 0.8,
                    criterion >= 1.0 && < 1.3
   ghc-options:   -rtsopts -Wall -fno-warn-unused-do-bind
   default-language: Haskell98
