Added creole reader test files to pandoc.cabal.

--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -168,6 +168,8 @@ extra-source-files:
                  test/textile-reader.textile
                  test/mediawiki-reader.wiki
                  test/vimwiki-reader.wiki
+                 test/creole-reader.txt
+                 test/creole-reader.native
                  test/rst-reader.rst
                  test/s5-basic.html
                  test/s5-fancy.html
