--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -327,6 +327,7 @@ library
                  scientific >= 0.2 && < 0.4,
                  vector >= 0.10 && < 0.13,
                  hslua >= 0.9 && < 0.10,
+                 hslua-module-text >= 0.1.2 && < 0.2,
                  binary >= 0.5 && < 0.9,
                  SHA >= 1.6 && < 1.7,
                  haddock-library >= 1.1 && < 1.5,
