--- a/stack.yaml
+++ b/stack.yaml
@@ -9,6 +9,7 @@ packages:
 extra-deps:
 - pandoc-types-1.17.3
 - hslua-0.9.2
+- hslua-module-text-0.1.2
 - skylighting-0.4.3.2
 - texmath-0.10
 - cmark-gfm-0.1.1
