Add basic lua List module
The List module is automatically loaded, but not assigned to a global
variable. It can be included in filters by calling `List = require
'List'`.

Lists of blocks, lists of inlines, and lists of classes are now given
`List` as a metatable, making working with them more convenient. E.g.,
it is now possible to concatenate lists of inlines using Lua's
concatenation operator `..` (requires at least one of the operants to
have `List` as a metatable):

    function Emph (emph)
      local s = {pandoc.Space(), pandoc.Str 'emphasized'}
      return pandoc.Span(emph.content .. s)
    end

Closes: #4081

--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -110,6 +110,8 @@ data-files:
                  data/sample.lua
                  -- pandoc lua module
                  data/pandoc.lua
+                 -- lua List module
+                 data/List.lua
                  -- sample highlighting theme
                  data/default.theme
                  -- bash completion template
