--- a/stack.pkg.yaml
+++ b/stack.pkg.yaml
@@ -23,6 +23,7 @@ extra-deps:
 - tasty-quickcheck-0.9.1
 - hs-bibutils-6.2.0.1
 - doctemplates-0.2.1
-- haddock-library-1.4.3
 - pandoc-citeproc-0.12.1
-resolver: lts-9.9
+- haddock-library-1.4.3
+- tagsoup-0.14.2
+resolver: lts-9.14
