--- a/stack.yaml
+++ b/stack.yaml
@@ -17,4 +17,5 @@ extra-deps:
 - tasty-quickcheck-0.9.1
 - doctemplates-0.2.1
 - haddock-library-1.4.3
-resolver: lts-9.9
+- tagsoup-0.14.2
+resolver: lts-9.14
