--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -111,7 +111,7 @@ data-files:
                  -- pandoc lua module
                  data/pandoc.lua
                  -- lua List module
-                 data/List.lua
+                 data/pandoc.List.lua
                  -- sample highlighting theme
                  data/default.theme
                  -- bash completion template
@@ -478,6 +478,7 @@ library
                    Text.Pandoc.Readers.Org.ParserState,
                    Text.Pandoc.Readers.Org.Parsing,
                    Text.Pandoc.Readers.Org.Shared,
+                   Text.Pandoc.Lua.Packages,
                    Text.Pandoc.Lua.PandocModule,
                    Text.Pandoc.Lua.Filter,
                    Text.Pandoc.Lua.StackInstances,
