Custom writer: use init file to setup Lua interpreter
The same init file (`data/init`) that is used to setup the Lua
interpreter for Lua filters is also used to setup the interpreter of
custom writers.lua.

--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -523,9 +523,10 @@ library
                    Text.Pandoc.Readers.Org.ParserState,
                    Text.Pandoc.Readers.Org.Parsing,
                    Text.Pandoc.Readers.Org.Shared,
+                   Text.Pandoc.Lua.Filter,
+                   Text.Pandoc.Lua.Init,
                    Text.Pandoc.Lua.Packages,
                    Text.Pandoc.Lua.PandocModule,
-                   Text.Pandoc.Lua.Filter,
                    Text.Pandoc.Lua.StackInstances,
                    Text.Pandoc.Lua.Util,
                    Text.Pandoc.CSS,
