Issue #1800 Add XWiki Support
This is very rudimentary for now. Based on DocuWiki/MediaWiki, but with less
support for special formatting because it's unclear what additional support
XWiki has for this.

--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -506,6 +506,7 @@ library
                    Text.Pandoc.Writers.Textile,
                    Text.Pandoc.Writers.MediaWiki,
                    Text.Pandoc.Writers.DokuWiki,
+                   Text.Pandoc.Writers.XWiki,
                    Text.Pandoc.Writers.ZimWiki,
                    Text.Pandoc.Writers.RTF,
                    Text.Pandoc.Writers.ODT,
