--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -214,6 +214,7 @@ extra-source-files:
                  test/creole-reader.txt
                  test/creole-reader.native
                  test/rst-reader.rst
+                 test/jats-reader.xml
                  test/s5-basic.html
                  test/s5-fancy.html
                  test/s5-fragment.html
@@ -436,6 +437,7 @@ library
                    Text.Pandoc.Readers.RST,
                    Text.Pandoc.Readers.Org,
                    Text.Pandoc.Readers.DocBook,
+                   Text.Pandoc.Readers.JATS,
                    Text.Pandoc.Readers.OPML,
                    Text.Pandoc.Readers.Textile,
                    Text.Pandoc.Readers.Native,
@@ -623,6 +625,7 @@ test-suite test-pandoc
                   Tests.Shared
                   Tests.Readers.LaTeX
                   Tests.Readers.HTML
+                  Tests.Readers.JATS
                   Tests.Readers.Markdown
                   Tests.Readers.Org
                   Tests.Readers.RST
