--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -525,6 +525,7 @@ library
                    Text.Pandoc.Lua.Init,
                    Text.Pandoc.Lua.Module.MediaBag,
                    Text.Pandoc.Lua.Module.Pandoc,
+                   Text.Pandoc.Lua.Module.Utils,
                    Text.Pandoc.Lua.Packages,
                    Text.Pandoc.Lua.StackInstances,
                    Text.Pandoc.Lua.Util,
