--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -606,6 +606,7 @@ test-suite test-pandoc
                   pandoc-types >= 1.17.3 && < 1.18,
                   bytestring >= 0.9 && < 0.11,
                   text >= 0.11 && < 1.3,
+                  time >= 1.5 && < 1.9,
                   directory >= 1 && < 1.4,
                   filepath >= 1.1 && < 1.5,
                   hslua >= 0.9 && < 0.10,
