--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -244,6 +244,7 @@ extra-source-files:
                  test/tables.txt
                  test/tables.fb2
                  test/tables.muse
+                 test/tables.custom
                  test/testsuite.txt
                  test/writer.latex
                  test/writer.context
@@ -272,6 +273,7 @@ extra-source-files:
                  test/writer.dokuwiki
                  test/writer.zimwiki
                  test/writer.muse
+                 test/writer.custom
                  test/writers-lang-and-dir.latex
                  test/writers-lang-and-dir.context
                  test/dokuwiki_inline_formatting.dokuwiki
