--- a/stack.yaml
+++ b/stack.yaml
@@ -1,9 +1,16 @@
 flags:
   pandoc:
     trypandoc: false
-    embed_data_files: false
+    embed_data_files: true
     old-locale: false
     network-uri: true
+  pandoc-citeproc:
+    bibutils: true
+    embed_data_files: true
+    unicode_collation: false
+    test_citeproc: false
+    debug: false
 packages:
+- '.'
 extra-deps: []
 resolver: lts-10.1
