--- a/stack.lts9.yaml
+++ b/stack.lts9.yaml
@@ -24,5 +24,6 @@ extra-deps:
 - doctemplates-0.2.1
 - haddock-library-1.4.3
 - tagsoup-0.14.2
+- hs-bibutils-6.2.0.1
 - pandoc-citeproc-0.12.2
 resolver: lts-9.14
