--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -605,6 +605,7 @@ test-suite test-pandoc
                   pandoc,
                   pandoc-types >= 1.17.3 && < 1.18,
                   bytestring >= 0.9 && < 0.11,
+                  base64-bytestring >= 0.1 && < 1.1,
                   text >= 0.11 && < 1.3,
                   time >= 1.5 && < 1.9,
                   directory >= 1 && < 1.4,
@@ -621,6 +622,11 @@ test-suite test-pandoc
                   containers >= 0.4.2.1 && < 0.6,
                   executable-path >= 0.0 && < 0.1,
                   zip-archive >= 0.2.3.4 && < 0.4
+  if flag(old-locale)
+     build-depends: old-locale >= 1 && < 1.1,
+                    time >= 1.2 && < 1.5
+  else
+     build-depends: time >= 1.5 && < 1.9
   other-modules:  Tests.Old
                   Tests.Command
                   Tests.Helpers
@@ -665,6 +671,8 @@ test-suite test-pandoc
                   Tests.Writers.TEI
                   Tests.Writers.Muse
                   Tests.Writers.FB2
+                  Tests.Writers.Powerpoint
+                  Tests.Writers.Powerpoint.PureData
   ghc-options:  -rtsopts -Wall -fno-warn-unused-do-bind -threaded
   default-language: Haskell98
 
