--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -622,7 +622,8 @@ test-suite test-pandoc
                   QuickCheck >= 2.4 && < 2.11,
                   containers >= 0.4.2.1 && < 0.6,
                   executable-path >= 0.0 && < 0.1,
-                  zip-archive >= 0.2.3.4 && < 0.4
+                  zip-archive >= 0.2.3.4 && < 0.4,
+                  xml >= 1.3.12 && < 1.4
   if flag(old-locale)
      build-depends: old-locale >= 1 && < 1.1,
                     time >= 1.2 && < 1.5
