--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -626,7 +626,8 @@ test-suite test-pandoc
                   containers >= 0.4.2.1 && < 0.6,
                   executable-path >= 0.0 && < 0.1,
                   zip-archive >= 0.2.3.4 && < 0.4,
-                  xml >= 1.3.12 && < 1.4
+                  xml >= 1.3.12 && < 1.4,
+                  base-compat >= 0.9
   if flag(old-locale)
      build-depends: old-locale >= 1 && < 1.1,
                     time >= 1.2 && < 1.5
