--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -418,6 +418,7 @@ library
   if impl(ghc < 7.10)
      hs-source-dirs: prelude
      other-modules:  Prelude
+     build-depends:  base-compat >= 0.9
 
   exposed-modules: Text.Pandoc,
                    Text.Pandoc.App,
@@ -562,6 +563,7 @@ executable pandoc
   if impl(ghc < 7.10)
      hs-source-dirs: prelude
      other-modules:  Prelude
+     build-depends:  base-compat >= 0.9
   main-is:         pandoc.hs
   buildable:       True
   other-modules:   Paths_pandoc
@@ -572,6 +574,7 @@ executable trypandoc
   if impl(ghc < 7.10)
      hs-source-dirs: prelude
      other-modules:  Prelude
+     build-depends:  base-compat >= 0.9
   default-language: Haskell2010
   if flag(trypandoc)
     build-depends: base, aeson, pandoc,
@@ -586,6 +589,7 @@ executable weigh-pandoc
   if impl(ghc < 7.10)
      hs-source-dirs: prelude
      other-modules:  Prelude
+     build-depends:  base-compat >= 0.9
   if flag(weigh-pandoc)
      build-depends:   pandoc,
                       base >= 4.2 && < 5,
@@ -605,6 +609,7 @@ test-suite test-pandoc
   if impl(ghc < 7.10)
      hs-source-dirs: prelude
      other-modules:  Prelude
+     build-depends:  base-compat >= 0.9
   build-depends:  base >= 4.2 && < 5,
                   pandoc,
                   pandoc-types >= 1.17.3 && < 1.18,
@@ -626,8 +631,7 @@ test-suite test-pandoc
                   containers >= 0.4.2.1 && < 0.6,
                   executable-path >= 0.0 && < 0.1,
                   zip-archive >= 0.2.3.4 && < 0.4,
-                  xml >= 1.3.12 && < 1.4,
-                  base-compat >= 0.9
+                  xml >= 1.3.12 && < 1.4
   if flag(old-locale)
      build-depends: old-locale >= 1 && < 1.1,
                     time >= 1.2 && < 1.5
@@ -688,6 +692,7 @@ benchmark benchmark-pandoc
   if impl(ghc < 7.10)
      hs-source-dirs: prelude
      other-modules:  Prelude
+     build-depends:  base-compat >= 0.9
   build-depends:   pandoc,
                    time, bytestring, containers,
                    base >= 4.2 && < 5,
