--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -500,7 +500,7 @@ library
                    Text.Pandoc.BCP47,
                    Text.Pandoc.Class
   other-modules:   Text.Pandoc.Filter,
-                   Text.Pandoc.Filter.Json,
+                   Text.Pandoc.Filter.JSON,
                    Text.Pandoc.Filter.Lua,
                    Text.Pandoc.Filter.Path,
                    Text.Pandoc.Readers.Docx.Lists,
