--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -508,6 +508,7 @@ library
                    Text.Pandoc.Readers.Docx.Parse,
                    Text.Pandoc.Readers.Docx.Util,
                    Text.Pandoc.Readers.Docx.StyleMap,
+                   Text.Pandoc.Readers.Docx.Fields,
                    Text.Pandoc.Readers.Odt.Base,
                    Text.Pandoc.Readers.Odt.Namespaces,
                    Text.Pandoc.Readers.Odt.StyleReader,
