--- a/appveyor.yml
+++ b/appveyor.yml
@@ -3,7 +3,7 @@ environment:
   global:
     WIXBIN: "c:\\Program Files (x86)\\WiX Toolset v3.11\\bin"
     STACK_YAML: "c:\\pandoc\\stack.yaml"
-    STACK_BUILD_OPTS: "-j1 --no-terminal --test --local-bin-path=.\\windows --ghc-options='-fexternal-interpreter'"
+    STACK_BUILD_OPTS: "-j1 --no-terminal --test --local-bin-path=.\\windows --ghc-options=-fexternal-interpreter"
     # see #4201, https://github.com/haskell-tools/haskell-tools/issues/277
   matrix:
   - STACK_VERSION: "windows-i386"
@@ -58,7 +58,7 @@ test_script:
       %STACK% setup > nul
       %STACK% path
       echo "" | %STACK% clean
-      echo "" | %STACK% %STACK_BUILD_OPTS% install pandoc pandoc-citeproc %STACK_FLAGS%
+      echo "" | %STACK% install %STACK_BUILD_OPTS% pandoc pandoc-citeproc %STACK_FLAGS%
 
 after_test:
     # .\ in the stack commandline seems to be .\windows\ (where the stack-appveyor.yaml is)
