--- a/pandoc.cabal
+++ b/pandoc.cabal
@@ -143,7 +143,8 @@ data-files:
                  data/pptx/ppt/notesMasters/notesMaster1.xml
                  data/pptx/ppt/notesSlides/_rels/notesSlide1.xml.rels
                  data/pptx/ppt/notesSlides/notesSlide1.xml
-                 data/pptx/ppt/notesSlides/_rels/notesSlide1.xml.rels
+                 data/pptx/ppt/notesSlides/_rels/notesSlide2.xml.rels
+                 data/pptx/ppt/notesSlides/notesSlide2.xml
                  data/pptx/ppt/theme/theme2.xml
                  data/pptx/[Content_Types].xml
                   -- stylesheet for EPUB writer
